--- a/src/main/resources/Static/index.html
+++ b/src/main/resources/Static/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Auctionista</title>
-    <link rel="stylesheet" href="/src/main/resources/Static/style.css">
+    <link rel="stylesheet" href="/src/main/resources/Static/style.css" >
 </head>
 <body>
 <div id="app"></div>
-
-<script src = "/src/main/resources/Static/Main.js" type = "module"> </script>
+<label name="Test">This here</label>
+<script src = "/src/main/resources/Static/main.js" type = "module"> </script>
 </body>
 </html>
